--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -9,57 +9,19 @@
     <link rel="stylesheet" href="form.css" />
   </head>
   <body>
-    <div class="container">
-      <h2>Texto de atras</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cumque
-        inventore beatae officia autem quia incidunt error, esse necessitatibus
-        cum ab illo expedita doloremque quis, reiciendis quo sunt iste dicta
-        qui, temporibus repellendus ducimus praesentium. Reiciendis libero
-        labore consequatur, debitis voluptatibus, ipsa modi delectus aut nulla
-        pariatur autem, perferendis voluptas reprehenderit eius possimus ipsam
-        laborum minus aperiam numquam dicta assumenda cupiditate quam odio eum?
-        Consequuntur eum cum, blanditiis temporibus veritatis odit qui quam, at
-        nostrum, rerum assumenda doloremque sunt eos impedit reprehenderit animi
-        beatae modi! Officiis quaerat repellat enim, quam exercitationem, nam
-        minus voluptatem incidunt aliquam quo animi commodi ex, modi ullam.
-        Dolor, harum. Cum quis itaque amet qui sunt. Maiores alias dolore
-        dignissimos quae, necessitatibus distinctio eius numquam iste repellat
-        nostrum repellendus pariatur. At fuga similique fugit fugiat illo atque
-        ducimus, suscipit modi saepe numquam quidem qui ratione soluta dolorem
-        sunt velit labore dolores quae delectus enim! Beatae recusandae ducimus
-        tenetur sint incidunt iure dolor atque quo iusto esse omnis delectus
-        distinctio provident in corporis temporibus, maiores eum reprehenderit
-        ab nisi? Alias quam dolores esse sit veniam earum voluptatibus
-        voluptatem labore rerum distinctio, repellat aspernatur doloremque! Enim
-        quas explicabo iste libero in soluta possimus inventore quis non
-        assumenda! Harum!
-      </p>
-      <!-- 
-    <nav>
-      <ul>
-        <li>Logo</li>
-        <li><a href="#">Mis Denuncias</a></li>
-        <li><a href="#">Perfil</a></li>
-      </ul>
-    </nav>
-      <div id="map"></div> -->
+    <div class="contenedor">
+      <nav>
+        <img src="fondo.png" alt="Logo Pagina" width="250" height="60" />
+      </nav>
+      <div id="map"></div>
 
-      <!-- <div class="btn-holder">
-        <button id="botonDenuncia">HACER DENUNCIA</button>
-      </div> -->
-
-      <button id="modal-btn" class="button">Click Here</button>
+      <button id="modal-btn" class="button">Hacer Denuncia</button>
 
       <div id="my-modal" class="modal">
         <div class="modal-content">
-          <div class="modal-header">
-            <span class="close">&times;</span>
-            <h2>Modal Header</h2>
-          </div>
           <div class="modal-body">
-            <button>Close Modal</button>
-            <form action="#" class="modal">
+            <button class="close">Cerrar</button>
+            <form action="#">
               <header>
                 <h2>Formulario para denuncias</h2>
               </header>
@@ -70,31 +32,24 @@
                   </legend>
 
                   <div>
-                    <input
-                      id="radioDefault_5"
-                      name="Field5"
-                      type="hidden"
-                      value=""
-                    />
                     <div>
                       <input
                         id="Field5_0"
-                        name="Field5"
+                        name="categoria"
                         type="radio"
-                        value="First Choice"
+                        value="Homicidio"
                         tabindex="5"
-                        checked="checked"
+                        checked
+                        required
                       />
-                      <label class="choice" for="Field5_0"
-                        >Inconducta de un policia</label
-                      >
+                      <label class="choice" for="Field5_0">Homicidio</label>
                     </div>
                     <div>
                       <input
                         id="Field5_1"
-                        name="Field5"
+                        name="categoria"
                         type="radio"
-                        value="Second Choice"
+                        value="Robo"
                         tabindex="6"
                       />
                       <label class="choice" for="Field5_1">Robo</label>
@@ -102,36 +57,12 @@
                     <div>
                       <input
                         id="Field5_2"
-                        name="Field5"
+                        name="categoria"
                         type="radio"
-                        value="Third Choice"
+                        value="Asalto"
                         tabindex="7"
                       />
-                      <label class="choice" for="Field5_2"
-                        >Accidente de Transito</label
-                      >
-                    </div>
-                    <div>
-                      <input
-                        id="Field5_2"
-                        name="Field5"
-                        type="radio"
-                        value="Third Choice"
-                        tabindex="7"
-                      />
-                      <label class="choice" for="Field5_2"
-                        >Drogas o sustancias prohibidas</label
-                      >
-                    </div>
-                    <div>
-                      <input
-                        id="Field5_2"
-                        name="Field5"
-                        type="radio"
-                        value="Third Choice"
-                        tabindex="7"
-                      />
-                      <label class="choice" for="Field5_2">Otros</label>
+                      <label class="choice" for="Field5_2">Asalto</label>
                     </div>
                   </div>
                 </fieldset>
@@ -146,25 +77,25 @@
                   <div>
                     <input
                       id="radioDefault_5"
-                      name="Field5"
+                      name="zona"
                       type="hidden"
                       value=""
                     />
                     <div>
                       <input
                         id="Field5_0"
-                        name="Field5"
+                        name="zona"
                         type="radio"
                         value="First Choice"
                         tabindex="5"
-                        checked="checked"
+                        required
                       />
                       <label class="choice" for="Field5_0">Si</label>
                     </div>
                     <div>
                       <input
                         id="Field5_2"
-                        name="Field5"
+                        name="zona"
                         type="radio"
                         value="Third Choice"
                         tabindex="7"
@@ -184,25 +115,25 @@
                   <div>
                     <input
                       id="radioDefault_5"
-                      name="Field5"
+                      name="desplazamiento"
                       type="hidden"
                       value=""
                     />
                     <div>
                       <input
                         id="Field5_0"
-                        name="Field5"
+                        name="desplazamiento"
                         type="radio"
                         value="First Choice"
                         tabindex="5"
-                        checked="checked"
+                        required
                       />
                       <label class="choice" for="Field5_0">A pie</label>
                     </div>
                     <div>
                       <input
                         id="Field5_2"
-                        name="Field5"
+                        name="desplazamiento"
                         type="radio"
                         value="Third Choice"
                         tabindex="7"
@@ -215,14 +146,30 @@
 
               <div>
                 <label class="desc" id="title1" for="Field1"
+                  >Fecha del incidente
+                </label>
+                <div>
+                  <input
+                    id="Field1"
+                    name="fecha"
+                    type="date"
+                    class="field text fn"
+                    required
+                  />
+                </div>
+              </div>
+
+              <div>
+                <label class="desc" id="title1" for="Field1"
                   >Hora del incidente
                 </label>
                 <div>
                   <input
                     id="Field1"
-                    name="Field1"
+                    name="hora"
                     type="time"
                     class="field text fn"
+                    required
                   />
                 </div>
               </div>
@@ -234,9 +181,9 @@
                 <div>
                   <textarea
                     id="Field4"
-                    name="Field4"
+                    name="informacion"
                     spellcheck="true"
-                    rows="10"
+                    rows="6"
                     cols="50"
                     tabindex="4"
                   ></textarea>
@@ -256,59 +203,64 @@
               </div>
             </form>
           </div>
-          <div class="modal-footer">
-            <h3>Modal Footer</h3>
-          </div>
         </div>
       </div>
     </div>
-    <div id="map"></div>
-
     <script>
       // This example creates circles on the map, representing populations in North
       // America.
 
       // First, create an object containing LatLng and population for each city.
-
+      let markers = [];
+      var map, currentMarker;
       var citymap = {
         intec: {
           center: { lat: 18.487182, lng: -69.962732 },
           population: 15,
-          type: 3
+          type: 1,
+          texto: `<h4>Nivel de peligro: ${1}</h4><p>En esta zona la cantidad de  denuncias es <b> minima </b>.</p>`
         },
         puya: {
           center: { lat: 18.506964, lng: -69.937154 },
           population: 12,
-          type: 1
+          type: 3,
+          texto: `<h4>Nivel de peligro: ${3}</h4><p>En esta zona las denuncias mas reportadas estan relacionadas con <b> atracos </b> y ocurren mayormente de <b>10:00-12:00PM</b>.</p><b>Recomendaciones:</b>No transite por estas zonas en las horas especificadas o de ser necesario ande con mas personas.<p>`
         },
         altosarroyo: {
           center: { lat: 18.503544, lng: -69.964365 },
           population: 30,
-          type: 1
+          type: 3,
+          texto: `<h4>Nivel de peligro: ${3}</h4><p>En esta zona las denuncias mas reportadas estan relacionadas con <b> los robos </b> y ocurren mayormente de <b>6:00-8:00PM</b>.</p><b>Recomendaciones:</b>Procure no usar prendas valiosas por esta zona.<p>`
         },
         lopevega: {
           center: { lat: 18.485393, lng: -69.932348 },
           population: 25,
-          type: 3
+          type: 1,
+          texto: `<h4>Nivel de peligro: ${1}</h4><p>En esta zona la cantidad de  denuncias es <b> minima </b>.</p>`
         },
-        canada: {
+        viejoarroyo: {
           center: { lat: 18.495161, lng: -69.942476 },
           population: 13,
-          type: 2
+          type: 2,
+          texto: `<h4>Nivel de peligro: ${2}</h4><p>En esta zona la cantidad de  denuncias es <b> media </b>. Los incidentes relacionados con <b>drogas</b> estan incrementando y ocurren mayormente de <b>6:00-8:00PM</b>.</p><p><b>Recomendaciones:</b>De ser posible no transite mucho por esta zona en las horas especificadas.</p>`
         }
       };
 
-      function placeMarker(position, map) {
-        var marker = new google.maps.Marker({
+      function placeMarker(position, map, info) {
+        var marcador = new google.maps.Marker({
           position: position,
-          map: map
+          map: map,
+          infowindow: info,
+          icon: "logo.png"
         });
         map.panTo(position);
+        markers.push(marcador);
+        return marcador;
       }
 
       function initMap() {
         // Create the map.
-        var map = new google.maps.Map(document.getElementById("map"), {
+        map = new google.maps.Map(document.getElementById("map"), {
           zoom: 14,
           center: { lat: 18.494184, lng: -69.944965 },
           mapTypeId: "terrain"
@@ -318,48 +270,40 @@
         // Note: We scale the area of the circle based on the population.
         for (let city in citymap) {
           // Add the circle for this city to the map.
-          if (citymap[city].type === 3) {
-            var cityCircle = new google.maps.Circle({
-              strokeColor: "#00FF00",
-              strokeOpacity: 0.8,
-              strokeWeight: 2,
-              fillColor: "#00FF00",
-              fillOpacity: 0.35,
-              map: map,
-              center: citymap[city].center,
-              radius: Math.sqrt(citymap[city].population) * 100
-            });
+          let color = "";
+          if (citymap[city].type === 1) {
+            color = "#00FF00";
           } else if (citymap[city].type === 2) {
-            var cityCircle = new google.maps.Circle({
-              strokeColor: "#FFFF00",
-              strokeOpacity: 0.8,
-              strokeWeight: 2,
-              fillColor: "#FFFF00",
-              fillOpacity: 0.35,
-              map: map,
-              center: citymap[city].center,
-              radius: Math.sqrt(citymap[city].population) * 100
-            });
+            color = "#FFFF00";
           } else {
-            var cityCircle = new google.maps.Circle({
-              strokeColor: "#FF0000",
-              strokeOpacity: 0.8,
-              strokeWeight: 2,
-              fillColor: "#FF0000",
-              fillOpacity: 0.35,
-              map: map,
-              center: citymap[city].center,
-              radius: Math.sqrt(citymap[city].population) * 100
-            });
+            color = "#FF0000";
           }
-          cityCircle.addListener("click", e => {
-            console.log("probando esto", this);
+          let cityCircle = new google.maps.Circle({
+            strokeColor: color,
+            strokeOpacity: 0.8,
+            strokeWeight: 2,
+            fillColor: color,
+            clickable: true,
+            fillOpacity: 0.35,
+            map: map,
+            center: citymap[city].center,
+            radius: Math.sqrt(citymap[city].population) * 100,
+            texto: citymap[city].texto
           });
-          // console.log(cityCircle);
+
+          google.maps.event.addListener(cityCircle, "click", function(ev) {
+            // console.log(circles);
+            // hideAllInfoWindows(map);
+            let contentString = `
+            <p>${this.texto}</p>`;
+            let infowindow = new google.maps.InfoWindow({
+              content: contentString
+            });
+            infowindow.setPosition(ev.latLng);
+            infowindow.open(map);
+            infowindows.push(infowindow);
+          });
         }
-        map.addListener("click", function(e) {
-          placeMarker(e.latLng, map);
-        });
       }
     </script>
     <script
@@ -367,5 +311,7 @@
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhg38t3Ager33HbnkI7PwW80GK564F2PQ&callback=initMap"
     ></script>
+
+    <script src="main.js"></script>
   </body>
 </html>
